# glassomium

./: JSAPI.html  README  README.md  faq.html  index.html
css/: stylec619.css
src/: AnimatedObject.cpp  AnimatedObject.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AppConfiguration.cpp  AppConfiguration.h  Appinfo.h  Application.cpp  Application.h  Blob.cpp  Blob.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  ColorChangeAnimation.cpp  ColorChangeAnimation.h  ConcurrentQueue.h  Configuration.cpp  Configuration.h  DragGesture.cpp  DragGesture.h  FileManager.cpp  FileManager.h  Gesture.cpp  Gesture.h  GestureEvent.h  GestureManager.cpp  GestureManager.h  Globals.h  KeyboardWindow.cpp  KeyboardWindow.h  Launcher.cpp  Launcher.h  OverlaySprite.cpp  OverlaySprite.h  PhysicsManager.cpp  PhysicsManager.h  PointerSprite.cpp  (+35 more)
src/cmake/: FindSFML.cmake
src/include/Box2D/: CMakeLists.txt
src/include/SFML/Graphics/: RenderStates.hpp  Texture.hpp
src/include/SFML/Window/: GlResource.hpp
src/include/TUIO/: CMakeLists.txt  FlashSender.cpp  FlashSender.h  LibExport.h  OscReceiver.cpp  OscReceiver.h  OscSender.cpp  OscSender.h  TcpReceiver.cpp  TcpReceiver.h  TcpSender.cpp  TcpSender.h  TuioBlob.cpp  TuioBlob.h  TuioClient.cpp  TuioClient.h  TuioContainer.cpp  TuioContainer.h  TuioCursor.cpp  TuioCursor.h  TuioDispatcher.cpp  TuioDispatcher.h  TuioListener.h  TuioManager.cpp  TuioManager.h  TuioObject.cpp  TuioObject.h  TuioPoint.cpp  TuioPoint.h  TuioServer.cpp  TuioServer.h  TuioTime.cpp  TuioTime.h  UdpReceiver.cpp  UdpReceiver.h  UdpSender.cpp  UdpSender.h
src/include/berkelium/: Berkelium.hpp  WindowDelegate.hpp
src/include/ip/: CMakeLists.txt
src/include/osc/: CMakeLists.txt  OscHostEndianness.h
src/include/sfgui/: CMakeLists.txt
src/include/sfgui/include/SFGUI/: Config.hpp  SharedPtr.hpp
src/lib/berkelium-win32/lib/: berkelium.lib
src/lib/cef1-win32/lib/: output.txt
src/lib/sfml-linux32/lib/: libsfml-network.so.2
src/lib/sfml-linux32/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-network.pc  sfml-window.pc
src/lib/sfml-linux64/lib/: libsfml-audio.so.2  libsfml-graphics.so.2  libsfml-system.so.2
src/lib/sfml-linux64/lib/pkgconfig/: sfml-graphics.pc  sfml-system.pc
src/lib/sfml-win32/lib/: sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-network-d.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
src/scripts/: create_precompiled_header.rb
src/server/: App.rb  AppScanner.rb  ConfigurationReader.rb  ProgramInfo.rb  ServerLogger.rb  Startup.rb  ThemeManager.rb  UIServer.rb  main.rb
src/server/JS/: developmentCode.js  injectOnLoad.js
src/server/PTCommon/: ArgumentParser.rb  Arguments.rb
src/server/Servlets/: ApplicationConfigs.rb  Apps.rb  BaseServlet.rb  Common.rb  InjectOnLoad.rb  Launcher.rb  ServletPlugin.rb  SystemStatic.rb  ThemeConfig.rb
src/server/Themes/default/: theme.cfg
src/server/Themes/default/system/background/: index.html
src/server/Themes/default/system/browserbar/: index.html
src/server/Themes/default/system/keyboard/: index.html
src/server/Themes/default/system/launcher/: item.tml  main.tml
src/server/Themes/default/system/screensaver/: index.html
src/server/Themes/minimal/: theme.cfg
src/server/Themes/minimal/system/crashpage/: index.html
src/server/Themes/minimal/system/launcher/: item.tml  main.tml
src/server/Themes/minimal/system/screensaver/: index.html
src/server/Themes/osx/: theme.cfg
src/server/Themes/osx/system/background/: index.html
src/server/Themes/osx/system/crashpage/: index.html
src/server/Themes/osx/system/launcher/: item.tml  main.tml
src/server/Themes/osx/system/screensaver/: index.html
src/server/WebRoot/: 404.html  index.html
src/server/WebRoot/apps/: README.txt
src/server/WebRoot/apps/AngryBirdsRio/: AngryBirdsRio.swf  index.html
src/server/WebRoot/apps/Calculator/: index.htm
src/server/WebRoot/apps/Calculator/assets/: application.cfg
src/server/WebRoot/apps/Checkers/: index.htm
src/server/WebRoot/apps/Checkers/assets/: application.cfg
src/server/WebRoot/apps/Checkers/files/: chekers-debug.js  halma.js  helmaStyle.css  mainStyle.css
src/server/WebRoot/apps/Chess/: index.html
src/server/WebRoot/apps/Chess/assets/: application.cfg
src/server/WebRoot/apps/Chess/files/: button.css  button.min.js  core048.js  default.css  game.min.js  jquery.plugins.min.js  menu132.js  widget097.css
src/server/WebRoot/apps/FeedThePanda/: FeedThePanda.swf  index.html
src/server/WebRoot/apps/FeedThePanda/assets/: application.cfg
src/server/WebRoot/apps/Flickr/: index.html
src/server/WebRoot/apps/Flickr/source/: Viewer.js
src/server/WebRoot/apps/FluidMath/: index.html
src/server/WebRoot/apps/GlowHockey/: index.htm
src/server/WebRoot/apps/GlowHockey/files/: Glo.CreateWorld.js  Glo.DrawWorld.js  Glo.Hockey.js  assets.js  index.css  jsTweener.js
src/server/WebRoot/apps/Maps/: app.json  index.html
src/server/WebRoot/apps/Maps/assets/: application.cfg
src/server/WebRoot/apps/MoviePlayer/: index.html  playlist.xml
src/server/WebRoot/apps/MultiTouchTest/: index.html
src/server/WebRoot/apps/MultiTouchToy/: index.htm
src/server/WebRoot/apps/PhotoCanvasDemo/: canvasElement.js  index.htm  index2.htm  index_purehtml.htm  magicgesture.js
src/server/WebRoot/apps/PhotoCanvasDemo/assets/: application.cfg  configuration  media.cfg
src/server/WebRoot/apps/PhotoCanvasDemo/css/: bootstrap.css  modern.css
src/server/WebRoot/apps/PhotoCanvasDemo/js/: kinetic-v3.10.5.min.js  magicgesture.js
src/server/WebRoot/apps/Planetarium/: index.html
src/server/WebRoot/apps/Planetarium/assets/: application.cfg
src/server/WebRoot/apps/Player/: index.html  playlist.json  speakker-big-1.0.29r105.min.js
src/server/WebRoot/apps/Shapes/: index.html
src/server/WebRoot/apps/Sinous/: index.htm
src/server/WebRoot/apps/Sketchout/: index.html
src/server/WebRoot/apps/Test/: index.html
src/server/WebRoot/apps/Water/: index.html
src/server/WebRoot/apps/Youtube/: index.html
(+138 files in other folders)
